@@ -1,3 +1,8 @@
+2009-03-04  Mark Ellis  <mark@mpellis.org.uk>
+
+	* tools/pls.c - if no path arg, don't append backslash to
+	  My Documents path, causes wrong behaviour in rapi1
+
 2009-02-17  Mark Ellis  <mark@mpellis.org.uk>
 
 	* tools/pls.c - fix bug in listing single directory arguement
